# Hand-Written-Digit-Recognizer

./: .gitignore  EXTRA_CREDIT_tf_train_model_ASSIGNMENT_FILE.py  README.md  code.py  extraCredit.txt  maze  sense_environment.py  testLaunch.py  testLaunchExtraCredit.py  tf_classify_sensed_image.py  tf_evaluate_model_code.py  tf_train_model_ASSIGNMENT_FILE.py  tf_train_model_ASSIGNMENT_FILE_EXTRACREDIT.py
model/: tf_model-8.index
model/ec_model_1000/: tf_model-8.index
model/working_model_500/: tf_model-8.data-00000-of-00001  tf_model-8.index
prx_core/: CMakeLists.txt  checkpoint  package.xml  util_plugin.xml  vis_plugin.xml
prx_core/launches/: assignment_1.launch  assignment_2.launch  block.yaml  block_2.yaml  maze.py  test_maze.txt
prx_core/launches/templates/: default_simulator.yaml  disk_manual_controller.yaml  rrt_star_obstacles.yaml  test_disk.yaml
prx_core/launches/visualization/: OSG_single_window.yaml  OSG_single_window_2.yaml  basic_light.yaml  basic_materials.yaml  visualization.launch  visualization_2.launch
prx_core/msg/: change_gripper_mode_msg.msg  plan_msg.msg  world_config_msg.msg
prx_core/nodes/: util_main.cpp  vis_main.cpp
prx_core/prx/utilities/applications/: application.hpp  demo_app.cpp  parse_image.py  search.hpp
prx_core/prx/utilities/communication/: communication.cpp  communication.hpp  tf_broadcaster.cpp  tf_listener.cpp
prx_core/prx/utilities/definitions/: defs.hpp  random.cpp  random.hpp  statistics.cpp  statistics.hpp  svg_image.cpp  sys_clock.hpp
prx_core/prx/utilities/distance_functions/: default_euclidean.cpp  distance_function.cpp  l_infinite_norm.cpp  manhattan_distance.cpp
prx_core/prx/utilities/distance_metrics/: distance_metric.cpp  distance_metric.hpp  linear_distance_metric.cpp
prx_core/prx/utilities/distance_metrics/graph_metric/: graph_metric.cpp  graph_proximity.cpp  graph_proximity.hpp  proximity_node.cpp  proximity_node.hpp
prx_core/prx/utilities/goals/: aggregate_goal.cpp  bounded_goal_region.cpp  bounded_goal_region.hpp  goal.cpp  goal.hpp  goal_plane.cpp  goal_plane.hpp  goal_state.cpp  goal_state.hpp  multiple_goal_states.cpp  multiple_goal_states.hpp  radial_goal_region.cpp  radial_goal_region.hpp
prx_core/prx/utilities/graph/: abstract_edge.hpp  abstract_node.cpp  abstract_node.hpp  tree.cpp  tree.hpp  undirected_graph.hpp
prx_core/prx/utilities/math/: bounds.cpp  bounds.hpp  config.cpp  config.hpp  geometry.cpp  geometry.hpp  geometry_info.hpp  quaternion.cpp  quaternion.hpp  trimesh.cpp  trimesh.hpp  vector.cpp  vector.hpp
prx_core/prx/utilities/parameters/: parameter_reader.cpp  parameter_reader.hpp  parameter_storage.cpp  parameter_storage.hpp
prx_core/prx/utilities/spaces/: full_mapping.cpp  full_mapping.hpp  hide_mapping.cpp  hide_mapping.hpp  mapping_function.cpp  obstacle_mapping.cpp  obstacle_mapping.hpp  space.cpp  space.hpp  space_types.cpp  space_types.hpp  subset_mapping.cpp  subset_mapping.hpp
prx_core/prx/visualization/: camera.hpp  handler.hpp  hud.hpp  scene.hpp  scene_comm.cpp  scene_comm.hpp  scene_text.hpp  visualization_comm.cpp  visualization_comm.hpp
prx_core/prx/visualization/PLUGINS/OSG/: osg_camera.cpp  osg_camera.hpp  osg_geode.cpp  osg_geode.hpp  osg_helpers.hpp  osg_hud.hpp  osg_light.cpp  osg_light.hpp  osg_material.hpp  osg_scene.cpp  osg_scene.hpp  osg_viewer.cpp  osg_viewer.hpp  osg_visualization.cpp  osg_visualization.hpp  osg_window.cpp  osg_window.hpp
prx_core/sensing/: sense_environment.py
prx_core/srv/: describe_geometries_srv.srv
prx_core/srv/simulation/: request_ground_truth_srv.srv  send_plans_srv.srv
src/prx_core/launches/: maze10  maze11  maze12  maze13  maze14  maze15  maze16  maze17  maze18  maze19  maze20  maze21  maze22  maze23  maze24  maze25  maze26  maze27  maze28  maze29  maze40  maze50  maze90
src/prx_core/prx/utilities/applications/: application.cpp  create_environment.py  demo_app.hpp  search.cpp
src/prx_core/sensing/: code.py  tf_classify_sensed_image.py  tf_evaluate_model_code.py  tf_train_model_ASSIGNMENT_FILE.py
