<package>
  <name>prx_core</name>
  <version>0.4.2</version>
  <description>

     The core libraries of the PRACSYS software

  </description>
  <author>Kostas Bekris</author>
  <license>BSD</license>
  <maintainer email="kostas.bekris@cs.rutgers.edu">Kostas Bekris</maintainer>
  <url>pracsyslab.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend> 
  
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>class_loader</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <export>
      <cpp cflags="-I${prefix}/" lflags="-L${prefix}/lib -lprx_core"/>
      <prx_core plugin="${prefix}/util_plugin.xml"/>
      <prx_core plugin="${prefix}/vis_plugin.xml"/>
  </export>

</package>


